Finishing touch. Fixing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@
     list-style-type: none;
 
     box-sizing: border-box;
+
+    scroll-behavior: smooth;
   }
 
   ::-webkit-scrollbar {
@@ -32,12 +34,6 @@
     background-color: #f7f4ef;
   }
 
-  html,
-  body,
-  main {
-    width: 100%;
-    height: 100%;
-  }
   .titlesub {
     font-family: "Victor Mono", monospace;
   }
@@ -60,38 +56,6 @@
   }
 
   .content {
-    flex: 0 0 100vw;
-    display: inline-block;
-  }
-
-  .content2 {
-    flex: 0 0 100vh;
-  }
-
-  .sticky__parent {
-    height: 500vh;
-  }
-
-  .sticky {
-    position: sticky;
-    overflow: hidden;
-    top: 0;
-    height: 100vh;
-  }
-
-  .scroll__section {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 500vw;
-    will-change: transform;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .scroll__section section {
     width: 100vw;
   }
 }
